[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/vaultinum_ts/__version__.py"

[project]
name = "vaultinum_ts"
dynamic = ["version"]
authors = [{ name = "Vaultinum", email = "contact@vaultinum.com" }]
description = "Client for Vaultinum's timestamping service."
keywords = ["vaultinum", "timestamping", "RFC3161"]
readme = { file = "Readme.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
]
dependencies = ["requests>=2.31.0", "rfc3161ng>=2.1.3"]

[project.urls]
Homepage = "https://github.com/vaultinum/vaultinum-timestamping-sdk"
Documentation = "https://docs.vaultinum.com"
Issues = "https://github.com/vaultinum/vaultinum-timestamping-sdk/issues"
